NetworkService: Fix undefined behavior in RegisterNonNetworkSubresourceURLLoaderFactories.

In ChromeContentBrowserClient::RegisterNonNetworkSubresourceURLLoaderFactories,
it's possible that no ExtensionWebContentsObserver is attached to the
WebContents for the given RenderFrameHost. Return early in that case.

BUG=818875

Change-Id: Ifca9cc67d36fe5aee0da496952125ef8ee199849
Reviewed-on: https://chromium-review.googlesource.com/950134
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541014}
Former-commit-id: 919285763bcd814bdbf49e1a808f90fb6bf9b9cd